Skończony UserService TODO: RentService - u nas LibraryService